<resources>
    <string name="app_name">Dog Adoption</string>
    <string name="register_placeholder">Register</string>
    <string name="login_title">Login</string>
    <string name="email_placeholder">Email</string>
    <string name="password_placeholder">Password</string>
    <string name="register_title">Register</string>
    <string name="dog_image">Dog Image</string>
    <string name="adopted">Adopted</string>
    <string name="adopt">Adopt</string>
    <string name="confirm_password_placeholder">Confirm Password</string>
    <string name="back_to_login">Back to login</string>
    <string name="details">Details</string>
    <string name="breed">Breed:</string>
    <string name="age">Age:</string>
    <string name="description">Description:</string>
    <string name="available">Available</string>
    <string name="add_dog">Add Dog</string>
    <string name="delete">Delete\n</string>
    <string name="edit">Edit\n</string>
    <string name="save_dog">Save Dog\n</string>
    <string name="already_adopted">Adopted</string>
    <string name="image_url">Image URL</string>
    <string name="dog_name">Dog Name</string>
    <string name="update_dog">Update Dog\n</string>
    <string name="manage_dogs">Manage Dogs</string>
    <string name="no_dogs">No dogs available at the moment.</string>
    <string name="no_dogs_admin">No dogs to manage.</string>
    <string name="logout">Logout</string>
</resources>